cabal-version:      3.0
name:               haskelled
version:            0.1.0.0
synopsis:           CIS HW

-- A longer description of the package.
-- description:
homepage:           https://www.github.com/KayserSoze42/haskelled

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             KayserSoze42
maintainer:         oxiemoron@plaintech.ink

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  
      Rzr
      M00
      M01
      M02
      M03
      Mo1
      Mo2
      Mo3
      Mo4
      Mo5
      Mo6
      Mo7
      Mo8
      Mo9

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, time, array,

    hs-source-dirs:   src, src/M0xs, src/Moxs
    default-language: Haskell2010

executable haskelled
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, haskelled, time

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite haskelled-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
